fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 .calculator-box {
   padding: 1rem;
   background: #2377fc;
-  width: 12rem;
+  width: 12.2rem;
   border-top-right-radius: 15px;
 }
 
@@ -12,10 +12,6 @@
   width: 12rem;
   border-top-right-radius: 15px;
   padding: 1px;
-}
-
-.separator {
-
 }
 
 .btn-number {
@@ -41,19 +37,18 @@
 }
 
 .btn-tall {
-  height: 6rem;
+  height: 6.05rem;
 }
 
 .btn-wide {
-  width: 6rem;
-  margin-left: 1px;
+  width: 6.05rem;;
 }
 
 .btn-enter {
-  height: 6rem;
+  height: 6.05rem;
   font-size: 14px;
-  margin-top: 1px;
 }
+
 /* flexbox containers */
 
 .calc-container {
